# contact-manager

./: .env.example  .gitignore  README.md  pyproject.toml  run.py
app/: __init__.py
app/config/: db.py  email.py  jwt.py  settings.py
app/controllers/: auth.py  contacts.py  users.py
app/errors/: exceptions.py  handlers.py
app/models/: __init__.py  contact.py  password_reset_token.py  user.py
app/repositories/: contact_repository.py  token_repository.py  user_repository.py
app/schemas/: schemas.py
app/services/: auth_service.py  contact_service.py  email_service.py  user_service.py
app/templates/user/: password-reset.html
tests/: conftest.py  factories.py
tests/controllers/: test_auth.py  test_contacts.py  test_users.py
tests/repositories/: test_contact_repository.py  test_token_repository.py  test_user_repository.py
tests/services/: test_auth_service.py  test_contact_service.py  test_email_service.py  test_user_service.py
